# planetary-particle-engine

./: CLAUDE.md  Cargo.toml  README.md
bins/ppe-daemon/: Cargo.toml
bins/ppe-daemon/src/: main.rs
bins/ppe-diag/: Cargo.toml
bins/ppe-diag/src/: main.rs
crates/ppe-can/: Cargo.toml
crates/ppe-can/src/: bus.rs  filter.rs  frame.rs  lib.rs  well_known.rs
crates/ppe-core/: Cargo.toml
crates/ppe-core/src/: clock.rs  component.rs  dtc.rs  error.rs  lib.rs  units.rs
crates/ppe-dashboard/: Cargo.toml
crates/ppe-dashboard/src/: lib.rs  state.rs  ui.rs
crates/ppe-diagnostics/: Cargo.toml
crates/ppe-diagnostics/src/: dtc_manager.rs  freeze_frame.rs  lib.rs  obd.rs
crates/ppe-hal/: Cargo.toml
crates/ppe-hal/src/: actuator.rs  commands.rs  lib.rs  mock.rs  sensor.rs
crates/ppe-scheduler/: Cargo.toml
crates/ppe-scheduler/src/: lib.rs  scheduler.rs  task.rs  watchdog.rs
crates/ppe-sim/: Cargo.toml
crates/ppe-sim/src/: lib.rs  physics.rs  scenario.rs
crates/ppe-state/: Cargo.toml
crates/ppe-state/src/: bms_state.rs  enerd_state.rs  events.rs  gear.rs  lib.rs  motor_state.rs  vehicle.rs
crates/ppe-subsystems/: Cargo.toml
crates/ppe-subsystems/src/: bms.rs  enerd.rs  lib.rs  motor.rs  subsystem.rs  thermal.rs
tests/integration/: Cargo.toml  bms_test.rs  can_bus_test.rs  enerd_test.rs  scheduler_test.rs
